On branch master  Changes to be committed: 	modified:   load-dir/rollout-prefix-set.fxs 	modified:   package-meta-data.xml 	modified:   src/Makefile 	modified:   src/yang/rollout-prefix-set.yang
Prefix-set name type changes to the leafref and points to CDB location where prefix-set-management service located

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ FXS = $(SRC:yang/%.yang=../load-dir/%.fxs)
 ## or to other YANG files
 # YANGPATH += ../../<ned-name>/src/ncsc-out/modules/yang \
 # 	../../<pkt-name>/src/yang
-
+YANGPATH += ../../prefix-set-management/src/yang yang
 NCSCPATH   = $(YANGPATH:%=--yangpath %)
 YANGERPATH = $(YANGPATH:%=--path %)
 
